--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -1,52 +1,38 @@
 {% extends 'base.html.twig' %}
 
-
-{% block title %}Connexion{% endblock %}
-
+{% block title %}Hello LoginController!{% endblock %}
 
 {% block body %}
-
 <div class="container my-5">
-
 {% if error %}
-
-        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-
+        <div class="login-error">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
-
-    <div class="col-md-6 offset-md-3">
-
-            <h1 class="text-center">Connexion</h1>
-
+    <div class="container form-container">
+    <div class="col-md-6 offset-md-3 form-wrapper">
+        <h1 class="text-center mb-4">Connexion</h1>
+        
+        {% if error %}
+            <div class="login-error">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        {% endif %}
+        
         <form action="{{ path('app_login') }}" method="post">
-
-            <label for="username">Email:</label>
-
-            <input class='form-control' type="text" id="username" name="_username" value="{{ last_username }}">
-
-            {#_username corespond a l'email#}
-
-            <label for="password mt-3">Password:</label>
-
-            <input type="password" class='form-control' id="password" name="_password">
-
-
+            <div class="mb-3">
+                <label for="username" class="form-label">Email:</label>
+                <input class="form-control" type="text" id="username" name="_username" value="{{ last_username }}">
+            </div>
             
-
+            <div class="mb-3">
+                <label for="password" class="form-label">Mot de passe:</label>
+                <input type="password" class="form-control" id="password" name="_password">
+            </div>
+            
             {# Conditionally set the _target_path hidden input field #}
-
             {% set targetPath = app.session.get('_security.main.target_path') %}
-
             <input type="hidden" name="_target_path" value="{{ targetPath ?: path('app_account') }}"> 
 
-
-            <button type="submit" class="btn btn-inscrire " >Me connecter</button>
-
+            <button type="submit" class="btn btn-primary btn-inscrire">Me connecter</button>
         </form>         
-
     </div>
-
 </div>
-
 
 {% endblock %}
