--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -39,6 +39,8 @@
 </div>
 {{ render(controller('App\\Controller\\SectionNewController::index')) }}
 
+{{ render(controller('App\\Controller\\BesoinController::index')) }}
+
 {{ render(controller('App\\Controller\\SectionCommentController::index')) }}
 
 {% endblock %}
