--- a/templates/section_new/index.html.twig
+++ b/templates/section_new/index.html.twig
@@ -1,6 +1,6 @@
 <div class = "selection">
-        <p class = "selection-texte"> </p>
-        <h2 class = "selection-title"> </h2>
+        <p class = "selection-texte"> Notre Selection </p>
+        <h1 class = "selection-title">  Nos Produits </h1>
     <div class = "selection-gallery"> 
 
     {% for product in products %}
