--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -162,6 +162,10 @@ nav .container-fluid {
   border-radius: 10px 10px 0 0 !important;
 }
 
+.fiche .card-header{
+  color: black;
+}
+
 .data-label {
   font-weight: 600;
   color: #566a88;
@@ -187,19 +191,26 @@ nav .container-fluid {
 
 .fiche {
   display: flex;
-  justify-content: space-between;
-  flex-wrap: nowrap;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
   width: 80%;
   margin: 0 auto;
+  min-height: 60vh;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
+  padding: 40px;
+  align-items: center;
 }
 
 .fiche-left {
+ 
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
 }
 .fiche-right {
+  
   display: flex;
   justify-content: center;
   align-items: center;
@@ -207,6 +218,12 @@ nav .container-fluid {
 
 .fiche_title {
   text-align: center;
+}
+
+.add-to-cart-form{
+  margin: 40px auto;
+  width: 50%;
+
 }
 
 .service {
@@ -276,6 +293,7 @@ nav .container-fluid {
   letter-spacing: 0.6px;
   margin-bottom: 20px;
   text-align: center;
+  color: black;
 }
 
 .card-foot {
