--- a/templates/order/summary.html.twig
+++ b/templates/order/summary.html.twig
@@ -25,7 +25,7 @@
 
                             <div class="col-md-2">
 
-                                <img src="{{ asset('build/images/boutique/' ~ product.object.image1) }}" class="img-fluid" alt="{{ product.object.name }}">
+                                <img src="{{ asset('build/images/' ~ product.object.image1) }}" class="img-fluid" alt="{{ product.object.name }}">
 
                             </div>
 
