--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -3,12 +3,12 @@
 
 {% block body %}
 <h1 class="text-center mt-5">Mon compte</h1>
-<div class="container my-5 d-flex flex-wrap justify-content-between">
+    <div class="container my-5 d-flex flex-wrap justify-content-between">
     
 <div class = "col-md-3 col-sm-12 mt-4">
 {% include 'account/_menu.html.twig' %} 
 </div>
-<div class="col-md-9 col-sm-12 mb-4">
+        <div class="col-md-9 col-sm-12 mb-4">
             <div class="card h-100" id="card-account">
                 <div class="card-header bg-primary">
                     <h4 class="mb-0">Mes informations personnelles</h4>
@@ -47,4 +47,6 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
 {% endblock %}
