--- a/templates/account/mes_commandes.html.twig
+++ b/templates/account/mes_commandes.html.twig
@@ -16,7 +16,9 @@
 
     </div>
 
-    <div class="col-md-9 text-center">
+    <div class = "form-container justify-content-start col-md-9">
+
+        <div class=" text-center  form-wrapper mb-5">
 
             <h5 class = "mb-5 text-center">Mes dernières commandes</h5>
 
