--- a/templates/product/fiche_produit.html.twig
+++ b/templates/product/fiche_produit.html.twig
@@ -6,7 +6,7 @@
 
 
     <h1 class = "fiche_title my-5">Produit</h1>
-<div class="fiche mb-3">
+<div class="fiche mb-3 vh-50 mb-5">
 
     <div class="fiche-left col-xl-4 col-md-4 col-sm-12">
     <h3 class="card-header">{{ product.name }}</h3>
