--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -28,6 +28,12 @@ a{
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
 }
 
+.login-error {
+  color: #dc3545;
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
 /*formulaire*/
 .input-group-text {
   padding: 10.8px 12px;
@@ -372,13 +378,45 @@ nav .container-fluid {
   cursor: pointer;
   text-align: center;
   padding: 10px;
+  margin-bottom: 20px;
 }
+
 
 .cart-page {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
   align-items: center;
   width: 100%;
+}
+
+.cart-summary{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 50%;
+  margin: 20px auto;
+
+}
+
+.summary-left, .summary-right{
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+}
+
+
+
+.payment-options {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 75%;
+  margin: 20px auto;
+}
+.payment-options a {
+  margin-bottom: 20px;
 }
 
 .item-image img {
@@ -388,9 +426,9 @@ nav .container-fluid {
 
 .cart-items {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   width: 75%;
+  flex-direction: column;
 }
 
 .cart-item {
@@ -398,7 +436,7 @@ nav .container-fluid {
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  margin: 60px 0;
+  margin: 25px 0;
   background-color: rgb(224, 224, 224);
   height: 120px;
   padding: 10px 20px;
