--- a/templates/account/address/index.html.twig
+++ b/templates/account/address/index.html.twig
@@ -6,20 +6,16 @@
 
     <div class="container my-5">
 
-        <h1>Espace membre</h1>
+        <h1 class="text-center mt-5 mb-5">Espace membre</h1>
+        <div class = "col-md-3 mt-5">
 
+        {% include 'account/_menu.html.twig' %}
 
-        <div class="row">
+        </div>
 
-            <div class="col">
+            <div class = "form-container justify-content-start col-md-9 mt-5">
 
-                {% include 'account/_menu.html.twig' %}
-
-            </div>
-
-            <div class="col">
-
-                <div class="d-flex justify-content-between">
+                <div class=" text-center  form-wrapper mb-5">
 
                     <h5>Mes adresses</h5>
 
@@ -38,7 +34,7 @@
 
                     {% for address in app.user.addresses %}
 
-                        <div class="col">
+                        <div class="col text-center  form-wrapper mb-5">
 
                             <div class="">
 
