--- a/templates/account/password.html.twig
+++ b/templates/account/password.html.twig
@@ -4,8 +4,11 @@
 {% block body %}
 <div class="container my-5">
     <h1 class="text-center">Mon compte</h1>
-    <div class="col-md-6 offset-md-3">
+    <div class="form-container justify-content-start col-md-9 mx-auto">
+        <div class=" text-center  form-wrapper mb-5">
         <h2 class="text-center">Modification du mot de passe</h2>
         {{form(modifyPwdForm)}}
+        </div>
     </div>
+</div>
 {% endblock %}
