--- a/templates/order/index.html.twig
+++ b/templates/order/index.html.twig
@@ -1,7 +1,8 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<div class="container">
+<main class="form-container w-50 mx-auto my-5">
+<div class="form-wrapper">
     <h1 class="text-center">Choix de l'adresse de livraison</h1>
     {{ form_start(deliverForm) }}
     <div class="form-group">
@@ -11,4 +12,5 @@
     <button type="submit" class="btn btn-primary">Valider</button>
     {{ form_end(deliverForm) }}
 </div>
+</main>
 {% endblock %}
