--- a/templates/register/index.html.twig
+++ b/templates/register/index.html.twig
@@ -5,7 +5,7 @@
 
 <div class="container my-5">
 
-    <div class="col-md-6 offset-md-3">
+    <div class="col-md-6 offset-md-3 form-wrapper">
 
         <h1 class="text-center">Inscription</h1>
 
