--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,5 @@
+
+
 .white {
   color: white;
 }
@@ -11,6 +13,12 @@
 a{
   text-decoration: none;
   cursor: pointer;
+}
+
+.collapse.navbar-collapse.show, 
+.collapse.navbar-collapse.show .navbar-nav
+{
+  background-color: white;
 }
 
 /* login */
@@ -153,6 +161,20 @@ nav .container-fluid {
   display: flex;
   flex-direction: column;
   height: 550px;
+}
+
+.selection-gallery .card {
+  width: 100%;
+  max-width: 350px;
+  min-width: 300px;
+  margin: 1rem;
+  flex: 1 1 300px;
+  border: none;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  height: 525px;
 }
 
 #card-account {
@@ -325,23 +347,16 @@ nav .container-fluid {
 
 .selection {
   background-color: #0186fd;
-  height: 926px;
   display: flex;
-  justify-content: center;
   align-items: center;
   flex-direction: column;
+  padding-bottom: 50px;
 }
 
-.selection h2 {
+.selection h1 {
   color: white;
   font-size: 30px;
-  margin-bottom: 20px;
-}
-
-.selection-texte {
-  color: white;
-  font-size: 20px;
-  margin-bottom: 20px;
+  margin: 20px;
 }
 
 .selection-gallery {
@@ -352,7 +367,7 @@ nav .container-fluid {
 }
 
 .btn-panier {
-  width: 354px;
+  width: 80%;
   height: 32px;
   border: 1px solid #e73439;
   border-radius: 10px;
